additional content, still using cayman theme

--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-cayman
+title: [FMI CompBio's public GitHub repositories]
+description: [Our software including supplementary code from publications and Bioconductor packages.] 
