--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-cayman
-title: [FMI CompBio's public GitHub repositories]
-description: [Our software including supplementary code from publications and Bioconductor packages.] 
+title: [FMI CompBio's code and data]
+description: [Our software, supplementary code/data from publications and Bioconductor packages.] 
